Kubernetes_1/echo-server.yml
apiVersion: v1
kind: Pod
metadata:
  name: echo-server
  labels:
    version: v1
    env: production
spec:
  containers:
    - name: echo-server
      image: pmscottx/echo-server:v1
      ports:
        - containerPort: 8080
      livenessProbe:
        httpGet:
          port: 8080
          path: /
        initialDelaySeconds: 5
        periodSeconds: 2
        timeoutSeconds: 2
        failureThreshold: 3
  imagePullSecrets:
    - name: myregistrysecret
