Kubernetes_1/status-monitor-ds.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: status-monitor-ds
spec:
  selector:
    matchLabels:
      app: status-monitor
  template:
    metadata:
      name: status-monitor
      labels:
        app: status-monitor
    spec:
      containers:
        - name: status-monitor
          image: landrzejewski/status-monitor:v1
