Kubernetes_1/sqrt-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqrt-deployment
spec:
  selector:
    matchLabels:
      app-name: sqrt-app
  replicas: 1
  template:
    metadata:
      labels:
        app-name: sqrt-app
    spec:
      containers:
        - name: php-apache
          image: k8s.gcr.io/hpa-example
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: sqrt-service
spec:
  ports:
    - port: 80
  selector:
    app-name: sqrt-app
